[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/CompassPro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Background/inicio.png" type="Texture" id=3]
[ext_resource path="res://Assets/Music/Forró Estilizado.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/CompassPro.ttf"

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Fonts/CompassPro.ttf"

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="Curve2D" id=10]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 16, 0, 0, 0, 0, 0, 16, 0, 0, 0, 0, 0, 16, 0, 0, 0, 0, 0, 64, 0, 0, 0, 0, 0, 64, -32, 0, 0, 0, 0, 16, 0 )
}

[sub_resource type="Curve2D" id=11]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 560, 0, 0, 0, 0, 0, 608, 0, 0, 0, 0, 0, 608, -32, 0, 0, 0, 0, 560, 0 )
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 368.0
texture = ExtResource( 3 )
expand = true

[node name="PlayButton" type="Button" parent="."]
margin_left = 276.0
margin_top = 165.0
margin_right = 372.0
margin_bottom = 200.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "JOGAR"
flat = true

[node name="ConfigButton" type="Button" parent="."]
margin_left = 276.0
margin_top = 223.0
margin_right = 372.0
margin_bottom = 255.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "OPÇÕES"
flat = true

[node name="CreditsButton" type="Button" parent="."]
margin_left = 276.0
margin_top = 285.0
margin_right = 385.0
margin_bottom = 317.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "CRÉDITOS"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0
autoplay = true
mix_target = 1

[node name="TitleLabel" type="Label" parent="."]
margin_left = 115.0
margin_top = 48.0
margin_right = 531.0
margin_bottom = 101.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 9 )
text = "CELSO CAMINHÕES"
align = 1
valign = 1

[node name="TruckTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PathLeft" type="Path2D" parent="."]
curve = SubResource( 10 )

[node name="PathFollow2D" type="PathFollow2D" parent="PathLeft"]
position = Vector2( 16, 0 )

[node name="PathRight" type="Path2D" parent="."]
curve = SubResource( 11 )

[node name="PathFollow2D" type="PathFollow2D" parent="PathRight"]
position = Vector2( 560, 0 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ConfigButton" to="." method="_on_ConfigButton_pressed"]
[connection signal="timeout" from="TruckTimer" to="." method="_on_TruckTimer_timeout"]
